// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/mardown should not render if no source 1`] = `
<div
  className="markdown"
  dangerouslySetInnerHTML={
    Object {
      "__html": "",
    }
  }
/>
`;

exports[`components/mardown should render 1`] = `
<div
  className="markdown"
  dangerouslySetInnerHTML={
    Object {
      "__html": "source",
    }
  }
/>
`;

exports[`components/mardown should render icon 1`] = `
<svg
  className="c"
  viewBox="0 0 208 128"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    height="118"
    ry="10"
    strokeWidth="10"
    width="198"
    x="5"
    y="5"
  />
  <path
    d="M30 98v-68h20l20 25 20-25h20v68h-20v-39l-20 25-20-25v39zM155 98l-30-33h20v-35h20v35h20z"
  />
</svg>
`;
